src/objects/AQMEN__c.object
<CustomObject>
    <description>Object for consolidated AQMEN data</description>
    <fields>
        <fullName>AFAblations__c</fullName>
        <label>AF: # Ablations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFAblationswithMappingSystems__c</fullName>
        <label>AF: % AF Ablations with Mapping Systems</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abl_Frontiers_Irri_Adv_Ablation_Cath_S__c</fullName>
        <formula>Abl_Frontiers_Irri_Adv_Ablation_Catheter__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Abl Frontiers Irri/Adv Abl Cath % S</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Abl_Frontiers_Irri_Adv_Ablation_Catheter__c</fullName>
        <label>AF: Abl Frontiers Irri/Adv Abl Catheter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abl_Frontiers_Standard_Ablation_Catheter__c</fullName>
        <label>AF: Abl Frontiers Standard Abl Catheter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abl_Frontiers_Stnd_Abltion_Cathr_Share__c</fullName>
        <formula>Abl_Frontiers_Standard_Ablation_Catheter__c /Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Abl Frontiers Stnd Abl Cathr %Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accuracy__c</fullName>
        <inlineHelpText>Use this field to describe the level of accuracy and &quot;weight&quot; which should be given to these numbers.</inlineHelpText>
        <label>Accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>These numbers are accurate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>These numbers are &quot;Best Guess&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited info available - potentially unreliable numbers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accuracy_details__c</fullName>
        <inlineHelpText>Use this field to further describe the level of accuracy of this information</inlineHelpText>
        <label>Accuracy details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddingEPLabnext18months__c</fullName>
        <label>AF: Adding EP Lab next 18 months?</label>
        <picklist>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AreBiotronikTactiCathused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF: Are Biotronik TactiCath used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreJJSmartTouchused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF: Are J&amp;J SmartTouch  used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreJJnMarqcathetersused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF: Are J&amp;J nMarq catheters used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArrayProcedures__c</fullName>
        <label>AF: Array Procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_Share__c</fullName>
        <formula>ArrayProcedures__c /Total_Procedures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Array % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BSXIrriAdvAblationCatheters__c</fullName>
        <label>AF: BSX Irri/Adv Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSXStandardAblationCatheters__c</fullName>
        <label>AF: BSX Standard Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSX_Irri_Adv_Ablation_Catheter_Share__c</fullName>
        <formula>BSXIrriAdvAblationCatheters__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: BSX Irri/Adv Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BSX_Standard_Ablation_Catheter_Share__c</fullName>
        <formula>BSXStandardAblationCatheters__c  / Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: BSX Standard Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BardIrriAdvAblationCatheters__c</fullName>
        <label>AF: Bard Irri/Adv Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BardStandardAblationCatheters__c</fullName>
        <label>AF: Bard Standard Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bard_Irri_Adv_Ablation_Catheter_Share__c</fullName>
        <formula>BardIrriAdvAblationCatheters__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Bard Irri/Adv Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bard_Standard_Ablation_Catheter_Share__c</fullName>
        <formula>BardStandardAblationCatheters__c /Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Bard Standard Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BiotronikIrriAdvAblationCatheters__c</fullName>
        <label>AF: Biotronik Irri/Adv Abl Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BiotronikStandardAblationCatheters__c</fullName>
        <label>AF: Biotronik Standard AblCatheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biotronik_Irri_Adv_Ablation_Catheter_S__c</fullName>
        <formula>BiotronikIrriAdvAblationCatheters__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Biotronik Irri/Adv Abl Catheter % S</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Biotronik_Sntd_Ablation_Catheter_Share__c</fullName>
        <formula>BiotronikStandardAblationCatheters__c /Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Biotronik Sntd Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRTDBSXUnits__c</fullName>
        <label>CRM: CRT-D BSX Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTDBTKUnits__c</fullName>
        <label>CRM: CRT-D BTK Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTDCameronHealthUnits__c</fullName>
        <label>CRM: CRT-D Cameron Health Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTDMDTUnits__c</fullName>
        <label>CRM: CRT-D MDT Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTDOtherUnits__c</fullName>
        <label>CRM: CRT-D Other Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTDSJMUnits__c</fullName>
        <label>CRM: CRT-D SJM Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTDSorinUnits__c</fullName>
        <label>CRM: CRT-D Sorin Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTPBSXUnits__c</fullName>
        <label>CRM: CRT-P BSX Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTPBTKUnits__c</fullName>
        <label>CRM: CRT-P BTK Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTPMDTUnits__c</fullName>
        <label>CRM: CRT-P MDT Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTPOtherUnits__c</fullName>
        <label>CRM: CRT-P Other Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTPSJMUnits__c</fullName>
        <label>CRM: CRT-P SJM Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRTPSorinUnits__c</fullName>
        <label>CRM: CRT-P Sorin Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRT_D_BSX_Share__c</fullName>
        <formula>CRTDBSXUnits__c /CRT_D_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-D BSX % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_D_BTK_Share__c</fullName>
        <formula>CRTDBTKUnits__c /CRT_D_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-D BTK % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_D_Cameron_Health_Share__c</fullName>
        <formula>CRTDCameronHealthUnits__c /CRT_D_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-D Cameron Health % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_D_MDT_Share__c</fullName>
        <formula>CRTDMDTUnits__c /CRT_D_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-D MDT % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_D_Other_Share__c</fullName>
        <formula>CRTDOtherUnits__c /  CRT_D_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-D Other % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_D_SJM_Share__c</fullName>
        <formula>CRTDSJMUnits__c / CRT_D_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-D SJM % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_D_Sorin_Share__c</fullName>
        <formula>CRTDSorinUnits__c /CRT_D_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-D Sorin % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_D_Total_Units__c</fullName>
        <formula>CRTDBSXUnits__c +
CRTDBTKUnits__c +
CRTDCameronHealthUnits__c +
CRTDMDTUnits__c +
CRTDOtherUnits__c +
CRTDSJMUnits__c +
CRTDSorinUnits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This sums the total # of units.</inlineHelpText>
        <label>CRM: CRT-D Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRT_D_of_total_implants_that_are_box__c</fullName>
        <label>CRM: CRT D - % tot implants that are box</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_P_BSX_Share__c</fullName>
        <formula>CRTPBSXUnits__c  / CRT_P_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-P BSX % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_P_BTK_Share__c</fullName>
        <formula>CRTPBTKUnits__c /  CRT_P_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-P BTK % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_P_MDT_Share__c</fullName>
        <formula>CRTPMDTUnits__c /  CRT_P_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-P MDT % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_P_Other_Share__c</fullName>
        <formula>CRTPOtherUnits__c /  CRT_P_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-P Other % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_P_SJM_Share__c</fullName>
        <formula>CRTPSorinUnits__c / CRT_P_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-P SJM % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_P_Sorin_Share__c</fullName>
        <formula>CRTPSorinUnits__c  /  CRT_P_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-P Sorin % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRT_P_Total_Units__c</fullName>
        <formula>CRTPBSXUnits__c +
 CRTPBTKUnits__c +
 CRTPMDTUnits__c +
 CRTPOtherUnits__c +
 CRTPSJMUnits__c +
 CRTPSorinUnits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: CRT-P Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carto3__c</fullName>
        <label>AF: Carto-3</label>
        <picklist>
            <picklistValues>
                <fullName>0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CartoProcedures__c</fullName>
        <label>AF: Carto Procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carto_Share__c</fullName>
        <formula>CartoProcedures__c /Total_Procedures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: Carto % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Carto__c</fullName>
        <label>AF: Carto</label>
        <picklist>
            <picklistValues>
                <fullName>0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centerconsideringresterilization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF: Center considering resterilization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClinicalTrialsBSX__c</fullName>
        <label>CRM: Clinical Trials - BSX</label>
        <picklist>
            <picklistValues>
                <fullName>No clinical trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClinicalTrialsBTK__c</fullName>
        <label>CRM: Clinical Trials - BTK</label>
        <picklist>
            <picklistValues>
                <fullName>No clinical trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClinicalTrialsMDT__c</fullName>
        <label>CRM: Clinical Trials - MDT</label>
        <picklist>
            <picklistValues>
                <fullName>No clinical trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClinicalTrialsOtherIndependent__c</fullName>
        <label>CRM: Clinical Trials - Other / Indep</label>
        <picklist>
            <picklistValues>
                <fullName>No clinical trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClinicalTrialsSJM__c</fullName>
        <label>CRM: Clinical Trials - SJM</label>
        <picklist>
            <picklistValues>
                <fullName>No clinical trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClinicalTrialsSOR__c</fullName>
        <label>CRM: Clinical Trials - SOR</label>
        <picklist>
            <picklistValues>
                <fullName>No clinical trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_tender_renewal_if_applicable__c</fullName>
        <label>CRM: Date of tender renewal, if applic</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_account_routinely_use_SJM_leads_on__c</fullName>
        <label>CRM: Account routinely use SJM leads ?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EPDiagnosticONLYProcedures__c</fullName>
        <label>AF: # EP Diagnostic ONLY Procedures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPlabsCRMandorEP__c</fullName>
        <label>AF: # EP labs (CRM and/or EP)</label>
        <picklist>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnSiteClassic__c</fullName>
        <label>AF: EnSite Classic</label>
        <picklist>
            <picklistValues>
                <fullName>0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnSiteVelocity__c</fullName>
        <label>AF: EnSite Velocity</label>
        <picklist>
            <picklistValues>
                <fullName>0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_date_of_corporate_agreement_if_appl__c</fullName>
        <label>CRM: End date of corp agreement, if appl</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AQMEN</relationshipLabel>
        <relationshipName>Profile_AQMEN</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HVTradBSXUnits__c</fullName>
        <label>CRM: HV-Trad BSX Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVTradBTKUnits__c</fullName>
        <label>CRM: HV-Trad BTK Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVTradMDTUnits__c</fullName>
        <label>CRM: HV-Trad MDT Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVTradOtherUnits__c</fullName>
        <label>CRM: HV-Trad Other Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVTradSJMUnits__c</fullName>
        <label>CRM: HV-Trad SJM Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVTradSorinUnits__c</fullName>
        <label>CRM: HV-Trad Sorin Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HV_Tr_of_total_implants_that_are_box__c</fullName>
        <label>CRM: HV Tr - % tot implants that are box</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HV_Trad_BSX_Share__c</fullName>
        <formula>HVTradBSXUnits__c /HV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: HV-Trad BSX % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HV_Trad_BTK_Share__c</fullName>
        <formula>HVTradBTKUnits__c /HV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: HV-Trad BTK % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HV_Trad_MDT_Share__c</fullName>
        <formula>HVTradMDTUnits__c  / HV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: HV-Trad MDT % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HV_Trad_Other_Share__c</fullName>
        <formula>HVTradOtherUnits__c /HV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: HV-Trad Other % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HV_Trad_SJM_Share__c</fullName>
        <formula>HVTradSJMUnits__c  /  HV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: HV-Trad SJM % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HV_Trad_Sorin_Share__c</fullName>
        <formula>HVTradSorinUnits__c /HV_Trad_Total_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: HV-Trad Sorin % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HV_Trad_Total_Units__c</fullName>
        <formula>HVTradBSXUnits__c + 
HVTradBTKUnits__c +
 HVTradMDTUnits__c +
 HVTradOtherUnits__c +
 HVTradSJMUnits__c +
 HVTradSorinUnits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM: HV-Trad Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILRSJMUnits__c</fullName>
        <label>CRM: ILR SJM Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILRTotalUnits__c</fullName>
        <label>CRM: ILR Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_the_center_already_collecting_cathete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AF: Center already collecting caths?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JJIrriAdvAblationCatheters__c</fullName>
        <label>AF: J&amp;J Irri/Adv Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JJStandardAblationCatheters__c</fullName>
        <label>AF: J&amp;J Standard Ablation Catheters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>J_J_Irri_Adv_Ablation_Catheter_Share__c</fullName>
        <formula>JJIrriAdvAblationCatheters__c /Total_Irri_Adv_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: J&amp;J Irri/Adv Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>J_J_Standard_Ablation_Catheter_Share__c</fullName>
        <formula>JJStandardAblationCatheters__c /  Total_Standard_Ablation_Catheters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AF: J&amp;J Standard Abl Catheter % Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVTradBSXUnits__c</fullName>
        <label>CRM: LV-Trad BSX Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVTradBTKUnits__c</fullName>
        <label>CRM: LV-Trad BTK Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVTradMDTUnits__c</fullName>
        <label>CRM: LV-Trad MDT Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVTradOtherUnits__c</fullName>
        <label>CRM: LV-Trad Other Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVTradSJMUnits__c</fullName>
        <label>CRM: LV-Trad SJM Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVTradSorinUnits__c</fullName>
        <label>CRM: LV-Trad Sorin Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>